<resources>
    <string name="app_name">MyChild</string>
    <string name="title_children">Ваша Группа</string>
    <string name="title_billing">Ваши Счета</string>
    <string name="title_event">Ваши События</string>
    <string name="group">Группа</string>
    <string name="event">События</string>
    <string name="billing">Счета</string>
    <string name="bill_text">Счёт #</string>
    <string name="name_title_text">Имя</string>
    <string name="patronymic_title_text">Отчество</string>
    <string name="surname_title_text">Фамилия</string>
    <string name="kid_age_title_text">Возраст</string>
    <string name="kid_locker_title_text">Шкафчик</string>
    <string name="kid_blood_type_title_text">Группа Крови</string>
    <string name="parent_role_title_text">Степень Родства</string>
    <string name="parent_kid_title_text">Ребёнок</string>
    <string name="parent_phone_num_title_text">Телефон</string>
    <string name="cancel_button">Отмена</string>
    <string name="ok_button">Ок</string>
    <string name="billing_target_default_text">Всей Группе</string>
    <string name="bill_status_true">Оплачен</string>
    <string name="bill_status_false">Неоплачен</string>
    <string name="bill_theme_title_text">Категория</string>
    <string name="bill_price_title_text">Сумма, руб.</string>
    <string name="bill_target_title_text">Ребёнок</string>
    <string name="bill_description_title">Введите комментарий</string>
    <string name="comment_ed_hint">Комментарий</string>
    <string name="save_btn_text">Сохранить</string>
    <string name="delete_btn_text">Удалить</string>
    <string name="bill_status_title_text">Статус</string>
    <string name="schedule_container_tv_text">Отметки Присутствия</string>
    <string name="schedule_arrive_text">Пришёл</string>
    <string name="schedule_leave">Ушёл</string>
    <string name="event_date_text">Дата События</string>
    <string name="eating_container_tv_text">Приём Пищи</string>
    <string name="other_text">Другое</string>
    <string name="sleep_end_text">Проснулся</string>
    <string name="sleep_start_text">Заснул</string>
    <string name="sleeping_text">Сон</string>
    <string name="eating_denial_text">Отказ От Пищи</string>
    <string name="eating_food_text">Рацион</string>
    <string name="eating_event_text">Событие</string>
    <string name="event_children_list_container_text">Выберите ребёнка, чтобы добавить событие</string>
    <string name="invite_code_title_text">Инвайт</string>
    <string name="kids_null_text">В группе никого нет…</string>
    <string name="back_btn_text">Назад</string>
    <string name="settings">Настройки</string>
    <string name="meal_list_tv_text">Список Блюд</string>
    <string name="delete_bill_title">Удалить счёт</string>
    <string name="delete_bill_message">Вы действительно хотите удалить этот счёт?</string>
    <string name="logout_text">Выйти</string>
    <string name="logout_message">Вы действительно хотите выйти из приложения?</string>
    <string name="delete_meal_title">Удалить блюдо</string>
    <string name="delete_meal_message">Вы действительно хотите удалить это блюдо?</string>
    <string name="new_meal_title">Новое блюдо</string>
    <string name="new_kid_title">Новый ребёнок</string>
    <string name="login_title">Вход</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="login_btn_text">Войти</string>
    <string name="auth_header_key">Authorization</string>
    <string name="some_field_is_null">Н/д</string>
    <string name="empty_input">Вы не указали значение!</string>
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="snack">Полдник</string>
    <string name="event_update_success">Событие сохранено!</string>
    <string name="kid_delete_title">Удалить ребёнка</string>
    <string name="kid_delete_message">Вы действительно хотите удалить этого ребёнка?</string>
    <string name="child_profile">child</string>
    <string name="picture_update_success">Фотография успешно обновлена!</string>
    <string name="no_picture_url">http://82.148.31.234:8000/photos/placeholder.jpg</string>
    <string name="delete_picture_title">Удалить фотографию</string>
    <string name="delete_picture_message">Вы действительно хотите удалить эту фотографию?</string>
    <string name="create_bill_text">Счёт успешно выставлен!</string>
    <string name="update_bill_text">Счёт успешно обновлён!</string>
    <string name="new_bill_title">Новый Счёт</string>
    <string name="single_bill_title">Ваш Счёт</string>
    <string name="gallery_title">Галерея</string>
    <string name="pic_description_ed_hint">Добавьте описание</string>
    <string name="null_description">Нет описания</string>
</resources>
