<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.BillingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/billing_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/billing_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/screen_horizontal_padding"
            android:paddingEnd="@dimen/screen_horizontal_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/billing_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/new_bill_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:src="@drawable/plus_icon"
            android:tint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bill_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTinyGrey"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/bill_sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <LinearLayout
                    android:id="@+id/bill_theme_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/screen_horizontal_padding"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/bill_theme_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/bill_theme_title_text"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/bill_theme_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="end"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bill_price_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/thin_top_border"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/screen_horizontal_padding"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bill_theme_container">

                    <TextView
                        android:id="@+id/bill_price_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/bill_price_title_text"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/bill_price_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="end"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bill_target_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/thin_top_border"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/screen_horizontal_padding"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bill_price_container">

                    <TextView
                        android:id="@+id/bill_target_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/bill_target_title_text"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/bill_target_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="end"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bill_status_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/thin_top_border"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/screen_horizontal_padding"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bill_target_container">

                    <TextView
                        android:id="@+id/bill_status_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/bill_status_title_text"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/bill_status_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="end"
                        android:textSize="18sp" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/thin_top_border"
                    android:paddingStart="@dimen/screen_horizontal_padding"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bill_status_container">

                    <TextView
                        android:id="@+id/bill_description_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:fontFamily="@font/roboto"
                        android:text="@string/bill_description_title"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/bill_description_ed"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/edit_text_w_stroke"
                        android:fontFamily="@font/roboto"
                        android:gravity="top"
                        android:hint="@string/comment_ed_hint"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@+id/bill_description_title" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bill_save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="25dp"
                        android:background="@drawable/save_button"
                        android:fontFamily="@font/roboto"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/save_btn_text"
                        android:textColor="@color/colorWhite87"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bill_description_ed" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bill_delete_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="25dp"
                        android:background="@drawable/delete_button"
                        android:fontFamily="@font/roboto"
                        android:text="@string/delete_btn_text"
                        android:textColor="@color/colorRed87"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/bill_save_btn"
                        app:layout_constraintTop_toBottomOf="@+id/bill_description_ed" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>